# Website-Developer-Agent-with-crewai

./: .gitignore  README.md  pyproject.toml
src/project/: app.py  crew.py  main.py
src/project/config/: agents.yaml  tasks.yaml
src/project/tools/: run_terminal.py
