[project]
name = "project"
version = "0.1.0"
description = "An AI-powered article writing agent using CrewAI."
authors = [{ name = "ReZaiden Salmani", email = "rezaidensalmani@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0",
    "gradio>=6.0.1",
]

[project.scripts]
project = "project.main:run"
run_crew = "project.main:run"
train = "project.main:train"
replay = "project.main:replay"
test = "project.main:test"
run_with_trigger = "project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
